--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A site to voice your opinions about subject areas in the city of Edmonton
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://rad-dice.cloudvent.net/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://rad-dice.cloudvent.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 # External Services
 facebook_page:
