--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: YEG City Critic
+title: City Critic YEG
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A site to voice your opinions about subject areas in the city of Edmonton
